<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    android:background="#FFCFD1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:background="#399B99"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/selectAvatarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_select_avatar"
            android:background="#399B99"
            android:textColor="#212631"
            android:textSize="20dp"
            android:layout_marginBottom="16dp"
            android:padding="10sp"/>

        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login"
            android:textSize="20dp"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#8E5757"
            android:textColorHint="#8E5757"
            android:textColor="#1A4B4A"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:textSize="20dp"
            android:backgroundTint="#8E5757"
            android:textColorHint="#8E5757"
            android:textColor="#1A4B4A"/>

        <EditText
            android:id="@+id/SurnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_surname"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:textSize="20dp"
            android:backgroundTint="#8E5757"
            android:textColorHint="#8E5757"
            android:textColor="#1A4B4A"/>

        <EditText
            android:id="@+id/NameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:textSize="20dp"
            android:backgroundTint="#8E5757"
            android:textColorHint="#8E5757"
            android:textColor="#1A4B4A"/>

        <EditText
            android:id="@+id/PatronymicEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_patronymic"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:textSize="20dp"
            android:backgroundTint="#8E5757"
            android:textColorHint="#8E5757"
            android:textColor="#1A4B4A"/>

        <EditText
            android:id="@+id/birthDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_birth_date"
            android:inputType="date"
            android:layout_marginBottom="16dp"
            android:textSize="20dp"
            android:backgroundTint="#8E5757"
            android:textColorHint="#8E5757"
            android:textColor="#1A4B4A"/>

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="24dp">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"
                android:textColor="#212631"
                android:buttonTint="#399B99"
                android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#212631"
                android:buttonTint="#399B99"
                android:text="@string/gender_female"/>
        </RadioGroup>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register_complete"
            android:textSize="20dp"
            android:background="#399B99"
            android:textColor="#212631"/>

    </LinearLayout>
</ScrollView>